# rust-forge-1.0v

./: .gitignore  Cargo.toml  README.md  app.rs
.github/workflows/: release.yml
src/: app.rs  main.rs
src/config/: mod.rs
src/core/: diagnostics.rs  hardware.rs  mod.rs  monitor.rs  persistence.rs  steam.rs  system.rs  tweaks.rs  update_checker.rs
src/ui/: mod.rs  theme.rs  widgets.rs
src/ui/tabs/: about.rs  advanced.rs  graphics.rs  launch.rs  mod.rs  profiles.rs  system.rs
