[package]
name = "rust-forge"
version = "1.0.0"
edition = "2021"
authors = ["RustForge"]
description = "RustForge — Ultimate Rust Game Optimizer & Launcher"
license = "MIT"

[[bin]]
name = "rust-forge"
path = "src/main.rs"

[dependencies]
eframe = { version = "=0.22.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui        = "=0.22.0"
serde       = { version = "=1.0.193", features = ["derive"] }
serde_json  = "=1.0.108"
dirs        = "=4.0.0"
log         = "=0.4.20"
env_logger  = "=0.10.1"
chrono      = { version = "=0.4.31", features = ["serde"] }
anyhow      = "=1.0.75"
# Pinned to the 0.29.x API surface deliberately — I know this exact API
# (System::new_all, refresh_all, trait-based SystemExt/CpuExt) with
# certainty. sysinfo 0.30+ removed those traits and reshaped the API in
# ways I haven't verified against live docs, and after the convar mistake
# I'd rather ship something I'm sure compiles than the newest version.
sysinfo     = "0.29"
ureq        = { version = "2", features = ["json"] }
semver      = "1"
open        = "5"

[target.'cfg(windows)'.dependencies]
winreg = "=0.51.0"
winapi = { version = "=0.3.9", features = [
    "winuser",
    "windef",
    "wingdi",
    "libloaderapi",
    "processthreadsapi",
    "winerror",
    "winbase",
    "winnt",
    "handleapi",
] }

[patch.crates-io]
egui-winit = { path = "vendor/egui-winit-patched" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
